# sharg-parser

./: .clang-format  .cmake-format.yaml  .codecov.yml  .gitignore  .gitmodules  .gitpod.yml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  release-checklist.md
.github/config/: codechecker.skip  codechecker.yml
.github/workflows/: api.yml  ci_cmake.yml  ci_coverage.yml  ci_documentation.yml  ci_license.yml  ci_lint.yml  ci_linux.yml  ci_macos.yml  ci_misc.yml  ci_weekly_ubuntu2004.yml  ci_weekly_ubuntu2204.yml  clang_format.yml  cron_api.yml  cron_codechecker.yml  cron_codeql.yml  cron_latest_libraries.yml  (+6 more)
build_system/: sarg-config-version.cmake  sarg-config.cmake  sharg-config-version.cmake  sharg-config.cmake  sharg-install.cmake  sharg-package.cmake
cmake/: cpack_install.cmake.in  package-lock.cmake  sharg-config-version.cmake  sharg-config.cmake  sharg-install.cmake  sharg-package.cmake
doc/: main_page.md
include/: fastq_conversion.hpp
src/: CMakeLists.txt  fastq_conversion.cpp  main.cpp
test/: CMakeLists.txt  sharg-test.cmake
test/analyse/: CMakeLists.txt
test/api/: CMakeLists.txt  convert_fastq_test.cpp
test/api_stability/: CMakeLists.txt  README.md
test/api_stability/1.0.0/: 0001-API-FIX-Print-common-options-at-the-end-of-the-help-.patch  0002-NOAPI-Update-copyright.patch  0003-API-FIX-Check-app_name-at-parse.patch  0004-FIX-API-tdl-support.patch
test/api_stability/1.1.1/: 0001-API-Update-TDL.patch  0002-API-Quoted-strings-and-paths.patch  0003-NOAPI-Update-copyright.patch  0004-INFRA-Update-TDL.patch  0005-INFRA-Use-seqan3-main-branch.patch  0006-API-FIX-positional-options-in-CWL-CTD.patch  0007-API-MISC-Defer-everything-to-parse.patch  0008-API-MISC-Allow-options-for-subcommands.patch  0009-FIX-is_option_set-match-both-long-and-short-ids.patch  0010-NOAPI-Update-copyright.patch  0011-INFRA-Bump-minor-version.patch  0012-NOAPI-Multiple-citatation.patch  0013-NOAPI-Default-synopsis.patch
test/api_stability/1.2.0/: 0001-NOAPI-Bump-version.patch
test/api_stability/1.2.1/: 0001-NOAPI-Bump-version.patch
test/api_stability/1.2.2/: 0001-NOAPI-Bump-version.patch
test/cli/: CMakeLists.txt  cli_test.hpp  fastq_to_fasta_options_test.cpp
test/cmake/: add_subdirectories.cmake  sharg_generate_snippet.cmake  sharg_macro_benchmark.cmake  sharg_path_longest_stem.cmake  sharg_require_benchmark.cmake  sharg_require_ccache.cmake  sharg_require_test.cmake  sharg_test_component.cmake  sharg_test_files.cmake
test/cmake/diagnostics/: list_missing_unit_tests.cmake  list_unused_snippets.cmake  list_unused_unit_tests.cmake
test/cmake/include_dependencies/: add_include_dependencies.cmake  generate_include_dependencies.cmake
test/coverage/: CMakeLists.txt
test/documentation/: CMakeLists.txt  DoxygenLayout.xml  DoxygenLayout.xml.in  README.md  api-stability.js  sharg-doxygen-package.cmake  sharg-doxygen.cmake  sharg.css  sharg_dark.css  sharg_doxygen_cfg.in  sharg_footer.html.in  sharg_header.html  sharg_logo.svg.license  version.js  version.php
test/documentation/.vercel/: README.md  build.sh  index.html  install.sh  vercel.css
test/documentation/doc_dev/: CMakeLists.txt
test/documentation/doc_usr/: CMakeLists.txt
test/documentation/doxygen-awesome/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  doxygen-awesome-tabs.js  doxygen-awesome.css
test/external_project/: CMakeLists.txt  find-package-diagnostics.cmake  install-sharg.cmake
test/external_project/sharg_fetch_content_zip/: CMakeLists.txt
test/external_project/sharg_installed/: CMakeLists.txt
test/external_project/sharg_setup_tutorial/: CMakeLists.txt
test/external_project/sharg_submodule_add_subdirectory/: CMakeLists.txt
test/external_project/sharg_submodule_find_package/: CMakeLists.txt
test/external_project/src/: hello_world.cpp
test/header/: CMakeLists.txt  generate_header_source.cmake
test/include/sharg/test/: expect_throw_msg.hpp  file_access.hpp  test_fixture.hpp  tmp_filename.hpp
test/scripts/: add_snippets_to_cookbook.sh  check_markdown_doxygen.sh  link_check.sh  update_copyright.sh
test/snippet/: CMakeLists.txt  add_subcommands.cpp  add_subcommands.out  argument_parser_1.cpp  argument_parser_2.cpp  argument_parser_3.cpp  auxiliary.cpp  compare_snippet_output.cmake  custom_argument_parsing_enumeration.cpp  custom_enumeration.cpp  custom_enumeration.out  custom_parsing_enumeration.cpp  custom_parsing_enumeration.out  is_option_set.cpp  is_option_set.out  parser_1.cpp  parser_1.out  parser_2.cpp  parser_2.out  parser_3.cpp  parser_3.out  readme_sneak_peek.cpp  readme_sneak_peek.out  safe_filesystem_entry.cpp  snippet_main.cpp  validators_1.cpp  validators_1.out  validators_2.cpp  validators_2.out  validators_3.cpp  validators_3.out  validators_4.cpp  validators_4.out  validators_chaining.cpp  validators_chaining.out  validators_input_directory.cpp  validators_input_directory.out  validators_input_file.cpp  validators_input_file.out  validators_input_file_ext_from_file.cpp  (+7 more)
test/unit/: CMakeLists.txt  README.md  argument_parser_design_error_test.cpp  enumeration_names_test.cpp  format_parse_test.cpp  format_parse_validators_test.cpp  parser_design_error_test.cpp
test/unit/coverage/: CMakeLists.txt
test/unit/detail/: CMakeLists.txt  format_ctd_test.cpp  format_cwl_test.cpp  format_help_test.cpp  format_html_test.cpp  format_man_test.cpp  format_tdl_test.cpp  safe_filesystem_entry_test.cpp  seqan3_test.cpp  type_name_as_string_test.cpp  version_check_debug_test.cpp  version_check_release_test.cpp  version_check_test.hpp
test/unit/parser/: CMakeLists.txt  enumeration_names_test.cpp  format_parse_test.cpp  format_parse_validators_test.cpp  parser_design_error_test.cpp  subcommand_test.cpp
test/unit/std/: CMakeLists.txt  charconv_float_test.cpp  charconv_int_test.cpp
test/unit/test/: CMakeLists.txt  file_access_test.cpp  tmp_filename_test.cpp
(+75 files in other folders)
